...
      }}
    >
      <Tabs.Screen
        name="index"
        options={{
          tabBarAccessibilityLabel: "Discover tab",
          tabBarButtonTestID: "discover-tab",
          tabBarIcon: ({ color, focused, size }) => (
            <TabBarIcon
              color={color}
              focused={focused}
              name="compass-outline"
              size={size}
...
